# LifeGame

./: .gitignore  CMakeLists.txt  README.md
Code/Debug/: makefile  sources.mk
Code/Debug/LifeGame/: subdir.mk
Code/LifeGame/: CMakeLists.txt  LifeGame.cc  LifeGame.cpp  LifeGame.hpp  LifeGame.imp  main.cpp
Code/LifeGame/Debug/: makefile  subdir.mk
Code/LifeGame/Include/: GeneralException.hpp  IncorrectInitialEstimateException.hpp  IncorrectSizesException.hpp  LifeGame.hpp  NoFileFoundException.hpp
Data/: data.lg  dataIncorrectInitialEstimate.lg  init.lg  init.txt  init100.txt
Testing/LifeGame/: CMakeLists.txt  LifeGameTest.cc
Testing/LifeGame/Debug/: LifeGameTest.d  makefile  subdir.mk
Utils/: Compile.sh  config.yml  createGraphics.m  loadMatrices.m  run.sh  videoscript.m
data/: init1000.txt  init500.txt
libs/plot/: createGraphics.m  generateInit.m  runTests.sh
research-computing-with-cpp-demo/Code/LifeGame/: .cproject
research-computing-with-cpp-demo/Testing/: CMakeLists.txt
research-computing-with-cpp-demo/Testing/LifeGame/: CMakeLists.txt
src/: BoardFileManager.cpp  BoardFileManager.hpp  CMakeLists.txt  GeneralException.hpp  IncorrectSizesException.hpp  LifeGame.cpp  LifeGame.hpp  LifeGameTestClass.cpp  LifeGameTestClass.hpp  NoFileFoundException.hpp  Position.hpp  commandLineUtilities.cpp  commandLineUtilities.hpp  general.hpp  main.cpp
src/imp/: LifeGame.cpp
src/include/: IncorrectInitialStateException.hpp  LifeGame.hpp
test/: CMakeLists.txt  LifeGameTest.cc  LifeGameTest.cpp
utils/: compile.sh  createVideo.m  videoscript.m
